<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unit Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Unit Converter</string>
    <string name="temperature">Temperature Converter</string>
    <string name="length">Length Converter</string>
    <string name="mass">Mass Converter</string>
    <string name="liquid">Volume Converter</string>
    <string name="inputTempHint">Input Value Here</string>
    <string name="convert">Convert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convertButton"> Convert </string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="centimeter">Centimeter</string>
    <string name="inches">Inches</string>
    <string name="foot">Foot</string>
    <string name="kilogram">Kilogram</string>
    <string name="pound">Pound</string>
    <string name="litre">Litre</string>
    <string name="ounce">Ounce</string>
    <string name="millilitre">Millilitre</string>
    <string name="title_activity_temp_converter">Temperature Converter</string>
    <string name="title_activity_length_converter">Length Converter</string>
    <string name="title_activity_mass_converter">Mass Converter</string>
    <string name="title_activity_liquid_Converter">Volume Converter</string>

</resources>
