<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/grunge_hdpi"
    tools:context="com.unitconverter.WelcomeScreen$PlaceholderFragment"
    >
    <!--    PARENT VIEW`-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/parentView"
        >
        <!--    TITLE VIEW  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/length"
                android:id="@+id/textView"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <!--    CONVERT VIEW  -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_alignParentStart="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/convert"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:layout_gravity="center"
                android:inputType="numberSigned|numberDecimal"
                android:id="@+id/inputLength"
                android:hint="@string/inputTempHint"
                />
        </LinearLayout>
        <!--    FROM VIEW  -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/from"
                android:layout_weight="0.25"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75"
                android:id="@+id/toGroup"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centimeter"
                    android:id="@+id/centimeter1"
                    android:checked="true"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inches"
                    android:id="@+id/inches1"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foot"
                    android:id="@+id/foot1"
                    />
            </RadioGroup>
        </LinearLayout>
        <!--    TO VIEW  -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/to"
                android:layout_weight="0.25"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75"
                android:id="@+id/fromGroup"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centimeter"
                    android:id="@+id/centimeter2"
                    android:checked="true"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inches"
                    android:id="@+id/inches2"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foot"
                    android:id="@+id/foot2"
                    />
            </RadioGroup>
        </LinearLayout>
        <!--    ANSWER VIEW  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="convert"
                android:id="@+id/convertButton"
                android:text="@string/convertButton"
                android:layout_weight="0.2"/>

            <View
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/answer"
                android:layout_weight="0.2"
                />
            <View
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>

        </LinearLayout>



    </LinearLayout>
</RelativeLayout>